apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__calendar__render_calendar_event_detail_text.snap
---
source: lorvex-cli/src/render.rs
expression: out
---
Lorvex Calendar Event
DB: /tmp/lorvex.db
ID: event-alpha
Title: Standup
Start: 2026-04-10 09:00
End: 2026-04-10 09:30
All-day: no
Type: event
Location: Zoom
Description: Daily team sync
