apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__calendar__render_calendar_timeline_text_empty.snap
---
source: lorvex-cli/src/render/snapshots/calendar.rs
expression: out
---
Lorvex Calendar
DB: /tmp/lorvex.db
  ↳ No calendar items in window — add an event with `lorvex calendar add "<title>" --start <iso>` or subscribe to a calendar.
